--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <title>
       {% block title %}
-      ifidel
+      Django Starter Template
     {% endblock title %}
   </title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
